<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/infoTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d0d0d0"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title -->

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_des_succursales"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/autheurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/par_tristan_guilherme_et_rafael"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/LienVersDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/clickez_ici_pour_voir_la_documentation_de_l_api"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Identify Yourself -->
    <TextView
        android:id="@+id/tvIdentify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identifiez_vous"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/infoTitre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/tbMatricule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:hint="@string/identifiant"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIdentify" />

    <EditText
        android:id="@+id/tbMotDePasse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbMatricule" />

    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        app:layout_constraintTop_toBottomOf="@id/tbMotDePasse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnInscription" />

    <!-- Button for 'Inscription' -->
    <Button
        android:id="@+id/btnInscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        app:layout_constraintTop_toBottomOf="@id/tbMotDePasse"
        app:layout_constraintLeft_toRightOf="@id/btnConnexion"
        app:layout_constraintRight_toRightOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d0d0d0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/footerImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/footerAuthors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/par_tristan_guilherme_et_rafael"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/footerImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footerLink" />

        <TextView
            android:id="@+id/docLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:text="@string/clickez_ici_pour_voir_la_documentation_de_l_api2"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/footerImage"
            app:layout_constraintStart_toStartOf="@id/footerImage"
            app:layout_constraintTop_toBottomOf="@id/footerAuthors" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:text="@string/tristan_blond_guilherme_et_rafael_castro"
            app:layout_constraintStart_toEndOf="@+id/footerImage"
            app:layout_constraintTop_toBottomOf="@+id/footerLink" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
